# gimp-deskew-plugin

./: .gitignore  AUTHORS  BUGS  ChangeLog  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in
admin/: prat-config.py  version.py
debian/: Makefile.am  changelog  control  copyright  rules
help/: Makefile.am  Makefile.in
help/en/: Makefile.in  gimp-help.xml  index.html
help/es/: Makefile.am  index.html
help/images/: Makefile.in
po/: ChangeLog  es.po  ru.po
src/: Makefile.am  Makefile.in  deskew.cc  deskew.h  interface.c  interface.h  main.c  render.c  render.h
src/formats/: Makefile  gimpfact.cc  gimpfact.h
src/raster/: bwfactory.h  bwimage.cc  bwimage.h  deskewer.cc  deskewer.h
src/util/: bitutil.cc  bitutil.h  cntptr.h
